modified colors and layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,13 @@
   opacity: 0.01;
   transition: opacity 1000ms ease-in;
 }
+/* .App {
+  text-align: center;
+  margin: auto;
+  width: 70%;
+  padding: 10px;
+  background-color: #b8d8d8;
+  color: #4f6367;
+  border: 2px solid #332b1e;
+  border-radius: 8px;
+} */
